// Copyright 2022 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.panelmatch.client.tools;

import "wfa/panelmatch/client/exchangetasks/join_key.proto";
import "wfa/virtual_people/common/event.proto";

option java_package = "org.wfanet.panelmatch.client.tools";
option java_multiple_files = true;

message DataProviderEventSet {
  message Entry {
    wfa.panelmatch.client.exchangetasks.JoinKeyAndId join_key_and_id = 1;
    repeated wfa_virtual_people.DataProviderEvent events = 2;
  }
  repeated Entry entries = 1;
}
